--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -32,30 +32,30 @@
 
 @font-face {
     font-family: "Calibre-Medium";
-    src: url("Calibre-Medium.woff2") format("woff2"),
-    url("Calibre-BoldItalic.woff") format("woff");
+    src: url("src/assets/Calibre-Medium.woff2") format("woff2"),
+    url("src/assets/Calibre-BoldItalic.woff") format("woff");
 }
 
 @font-face {
     font-family: "Calibre-Regular";
-    src: url("Calibre-Regular.woff2") format("woff2"),
-    url("Calibre-Regular.woff") format("woff");
+    src: url("src/assets/Calibre-Regular.woff2") format("woff2"),
+    url("src/assets/Calibre-Regular.woff") format("woff");
 }
 
 @font-face {
     font-family: "Calibre-Semibold";
-    src: url("Calibre-Semibold.woff2") format("woff2"),
-    url("Calibre-Semibold.woff") format("woff");
+    src: url("src/assets/Calibre-Semibold.woff2") format("woff2"),
+    url("src/assets/Calibre-Semibold.woff") format("woff");
 }
 
 @font-face {
     font-family: "Calibre-Semibold-Italic";
-    src: url("Calibre-SemiboldItalic.woff2") format("woff2"),
-    url("Calibre-SemiboldItalic.woff") format("woff");
+    src: url("src/assets/Calibre-SemiboldItalic.woff2") format("woff2"),
+    url("src/assets/Calibre-SemiboldItalic.woff") format("woff");
 }
 
 @font-face {
     font-family: "Calibre-Black-Italic";
-    src: url("Calibre-BlackItalic.woff2") format("woff2"),
-    url("Calibre-BlackItalic.woff") format("woff");
+    src: url("src/assets/Calibre-BlackItalic.woff2") format("woff2"),
+    url("src/assets/Calibre-BlackItalic.woff") format("woff");
 }
