--- a/src/layout/theme.liquid
+++ b/src/layout/theme.liquid
@@ -189,27 +189,27 @@
 
 
 
-  {{ 'variables.css' | asset_url | stylesheet_tag }}
+  {{ 'variables.css' 	| asset_url | stylesheet_tag }}
   {{ 'replace-initial-styles.css' | asset_url | stylesheet_tag }}
-  {{ 'header.css' | asset_url | stylesheet_tag }}
-  {{ 'main.css' | asset_url | stylesheet_tag }}
-  {{ 'footer.css' | asset_url | stylesheet_tag }}
-  {{ 'slider-conf.css' | asset_url | stylesheet_tag }}
+  {{ 'header.css'		| asset_url | stylesheet_tag }}
+  {{ 'main.css' 		| asset_url | stylesheet_tag }}
+  {{ 'footer.css' 		| asset_url | stylesheet_tag }}
   {{ 'chief-slider.css' | asset_url | stylesheet_tag }}
-  {{ 'select2.min.css' | asset_url | stylesheet_tag }}
+  {{ 'slider-conf.css' 	| asset_url | stylesheet_tag }}
+  {{ 'select2.min.css' 	| asset_url | stylesheet_tag }}
   {{ 'convertSelect.css' | asset_url | stylesheet_tag }}
 
   {{ 'jquery-3.6.0.min.js' | asset_url | script_tag }}
-  {{ 'select2.js' | asset_url | script_tag }}
-  {{ 'chief-slider.js' | asset_url | script_tag }}
+  {{ 'select2.js' 		| asset_url | script_tag }}
+  {{ 'chief-slider.js' 	| asset_url | script_tag }}
   {{ 'accountConvertSelect.js' | asset_url | script_tag }}
   {{ 'footerLangConvertSelect.js' | asset_url | script_tag }}
   {{ 'langConvertSelect.js' | asset_url | script_tag }}
-  {{ 'menuMoveElem.js' | asset_url | script_tag }}
-  {{ 'mibileMenu.js' | asset_url | script_tag }}
-  {{ 'navUtilHide.js' | asset_url | script_tag }}
-  {{ 'search.js' | asset_url | script_tag }}
-  {{ 'sliderConfig.js' | asset_url | script_tag }}
+  {{ 'menuMoveElem.js' 	| asset_url | script_tag }}
+  {{ 'mobileMenu.js' 	| asset_url | script_tag }}
+  {{ 'navUtilHide.js' 	| asset_url | script_tag }}
+  {{ 'search.js' 		| asset_url | script_tag }}
+  {{ 'sliderConfig.js' 	| asset_url | script_tag }}
 
 
 
@@ -227,17 +227,78 @@
 
   <div class="page-container drawer-page-content" id="PageContainer">
 
-    <main class="main-content js-focus-hidden" id="MainContent" role="main" tabindex="-1">
-      {{ content_for_layout }}
-    </main>
 
-    {% section 'footer' %}
+	  <main class="main">
+		  <div class="slider">
+			  <div class="slider__container">
+				  <div class="slider__wrapper">
+					  <div class="slider__items">
+						  <div class="slider__item">
+							  {{ 'slider-1.jpg' | asset_url | img_tag: '', 'slider__item__img' }}
+
+							  <div class="after-content">
+								  <div class="after-content__text">SEEK AND ENJOY</div>
+
+								  <a href="#" target="_blank">
+									  <button class="button after-content__button">
+										  READ MORE
+										  {{ 'right.png' | asset_url | img_tag: '', 'arrow' }}
+									  </button>
+								  </a>
+							  </div>
+						  </div>
+						  <div class="slider__item">
+							  {{ 'slider-2.jpg' | asset_url | img_tag: '', 'slider__item__img' }}
+
+							  <div class="after-content">
+								  <div class="after-content__text">
+									  SEEK AND ENJOY
+								  </div>
+
+								  <a href="#" target="_blank">
+									  <button class="button after-content__button">
+										  READ MORE
+										  {{ 'right.png' | asset_url | img_tag: '', 'arrow' }}
+									  </button>
+								  </a>
+							  </div>
+						  </div>
+						  <div class="slider__item">
+							  {{ 'slider-3.jpg' | asset_url | img_tag: '', 'slider__item__img' }}
+
+							  <div class="after-content">
+								  <div class="after-content__text">
+									  SEEK AND ENJOY
+								  </div>
+
+								  <a href="#" target="_blank">
+									  <button class="button after-content__button">
+										  READ MORE
+										  {{ 'right.png' | asset_url | img_tag: '', 'arrow' }}
+									  </button>
+								  </a>
+							  </div>
+						  </div>
+					  </div>
+				  </div>
+			  </div>
+
+			  <!-- Кнопки для перехода к предыдущему и следующему слайду -->
+			  <a href="#" class="slider__control" data-slide="prev"></a>
+			  <a href="#" class="slider__control" data-slide="next"></a>
+		  </div>
+	  </main>
+    {% comment %}<main class="main-content js-focus-hidden" id="MainContent" role="main" tabindex="-1">{% endcomment %}
+      {% comment %}{{ content_for_layout }}{% endcomment %}
+    {% comment %}</main>{% endcomment %}
 
     <div id="slideshow-info" class="visually-hidden" aria-hidden="true">
       {{- 'sections.slideshow.navigation_instructions' | t -}}
     </div>
 
   </div>
+
+  {% section 'footer-custom' %}
 
   <script type="application/json" data-cart-routes>
     {
