--- a/src/sections/header-custom.liquid
+++ b/src/sections/header-custom.liquid
@@ -1,6 +1,6 @@
 <header class="header">
 	<div class="navigation-utility" id="navigation-utility">
-		<div class="navigation-utility__empty"></div>
+		<div class="navigation-utility__empty">HERE</div>
 
 		<div class="navigation-utility__headline">
                 FREE NO FAULT CRASH REPLACEMENT GUARANTEE
@@ -13,7 +13,7 @@
 
 			<div class="links-right__find-dialer links-right__item">
 				<a href="#" target="_blank">
-					<img src="../icons/icon-geolocation.png" alt="geolocation-icon" class="links-right__find-dialer__icon">
+					{{ 'icon-geolocation.png' | asset_img_url: 'x14' | img_tag }}
 					Find a Dealer
 				</a>
 			</div>
@@ -29,7 +29,7 @@
 
 			<div class="links-right__dropdown links-right__item" id="lang-select">
 				<select class="js-lang_select-single" name="state">
-					<option value="EN"></option>
+					<option value="EN" data-flag-url="{{ 'en.png' | asset_url }}"></option>
 					<option value="RU"></option>
 					<option value="UA"></option>
 				</select>
@@ -39,7 +39,9 @@
 
 	<div class="navigation-main" id="navigation-main">
 		<div class="header-logo">
-			<a href="/"><img class="header-logo__logo" src="../assets/roval-logo.png" alt="roval-logo"></a>
+			<a href="/" target="_blank">
+				{{ 'roval-logo.png' | asset_img_url: 'x20' | img_tag: 'roval-logo', 'header-logo__logo' }}
+			</a>
 		</div>
 
 		<nav class="navigation">
@@ -53,64 +55,68 @@
 				<li class="menu__item">
 					<button class="first-level-menu" onclick="showSecondLevel(event.target)">
 						SHOP
-						<span class="mobile-arrow"><img src="../icons/right-arrow.png" alt=""></span>
+						<span class="mobile-arrow">
+							{{ 'right-arrow.png' | asset_url | img_tag }}
+						</span>
 					</button>
 
 					<ul class="menu__item-content content-shop">
 						<button class="second-level-menu" onclick="hideSecondLevel()">
-							<span class="mobile-arrow-back"><img src="../icons/right.png" alt=""></span>
+							<span class="mobile-arrow-back">
+								{{ 'right.png' | asset_url | img_tag }}
+							</span>
 							SHOP
 						</button>
 
 						<li class="content__item">
 							<a class="content__item-link" href="#" target="_blank">
-								<img src="../assets/bar-item-road.jpg" alt="bar-item-road">
+								{{ 'bar-item-road.jpg' | asset_url | img_tag: 'bar-item-road' }}
 								<h5 class="content__item__header">ROAD</h5>
-								<img class="content__item-arrow" src="../icons/right.png" alt="right">
+								{{ 'right.png' | asset_url | img_tag: '', 'content__item-arrow' }}
 							</a>
 						</li>
 
 						<li class="content__item">
 							<a class="content__item-link" href="#" target="_blank">
-								<img src="../assets/bar-item-gravel.jpg" alt="bar-item-gravel">
+								{{ 'bar-item-gravel.jpg' | asset_url | img_tag: 'bar-item-gravel' }}
 								<h5 class="content__item__header">GRAVEL</h5>
-								<img class="content__item-arrow" src="../icons/right.png" alt="right">
+								{{ 'right.png' | asset_url | img_tag: '', 'content__item-arrow' }}
 							</a>
 						</li>
 
 						<li class="content__item">
 							<a class="content__item-link" href="#" target="_blank">
-								<img src="../assets/bar-item-xc.jpg" alt="bar-item-xc">
+								{{ 'bar-item-xc.jpg' | asset_url | img_tag: 'bar-item-xc' }}
 								<h5 class="content__item__header">XC</h5>
-								<img class="content__item-arrow" src="../icons/right.png" alt="right">
+								{{ 'right.png' | asset_url | img_tag: '', 'content__item-arrow' }}
 							</a>
 						</li>
 
 						<li class="content__item">
 							<a class="content__item-link" href="#" target="_blank">
-								<img src="../assets/bar-item-trail.jpg" alt="bar-item-trail">
+								{{ 'bar-item-trail.jpg' | asset_url | img_tag: 'bar-item-trail' }}
 								<h5 class="content__item__header">TRAIL</h5>
-								<img class="content__item-arrow" src="../icons/right.png" alt="right">
+								{{ 'right.png' | asset_url | img_tag: '', 'content__item-arrow' }}
 							</a>
 						</li>
 
 						<li class="content__item">
 							<a class="content__item-link" href="#" target="_blank">
-								<img src="../assets/bar-item-triathlon.jpg" alt="bar-item-triathlon">
+								{{ 'bar-item-triathlon.jpg' | asset_url | img_tag: 'bar-item-triathlon' }}
 								<h5 class="content__item__header">TRIATHLON</h5>
-								<img class="content__item-arrow" src="../icons/right.png" alt="right">
+								{{ 'right.png' | asset_url | img_tag: '', 'content__item-arrow' }}
 							</a>
 						</li>
 
 						<li class="content__item item-links">
 							<a href="#">
 								<h5 class="content__item__header">ACCESSORIES</h5>
-								<img class="content__item-arrow" src="../icons/right.png" alt="right">
+								{{ 'right.png' | asset_url | img_tag: '', 'content__item-arrow' }}
 							</a>
 
 							<a href="#">
 								<h5 class="content__item__header">TRUE DEALS</h5>
-								<img class="content__item-arrow" src="../icons/right.png" alt="right"><br/>
+								{{ 'right.png' | asset_url | img_tag: '', 'content__item-arrow' }}
 								<div class="gray-text">Up to 70% off</div>
 							</a>
 						</li>
@@ -120,36 +126,40 @@
 				<li class="menu__item">
 					<button class="first-level-menu" onclick="showSecondLevel(event.target)">
 						OUR STORY
-						<span class="mobile-arrow"><img src="../icons/right-arrow.png" alt=""></span>
+						<span class="mobile-arrow">
+							{{ 'right-arrow.png' | asset_url | img_tag }}
+						</span>
 					</button>
 
 					<ul class="menu__item-content  content-our-story">
 						<button class="second-level-menu" onclick="hideSecondLevel()">
-							<span class="mobile-arrow-back"><img src="../icons/right.png" alt=""></span>
+							<span class="mobile-arrow-back">
+								{{ 'right.png' | asset_url | img_tag }}
+							</span>
 							OUR STORY
 						</button>
 
 						<li class="content__item">
 							<a class="content__item-link" href="#" target="_blank">
-								<img src="../assets/bar-item-our-promise.jpg" alt="bar-item-our-promise">
+								{{ 'bar-item-our-promise.jpg' | asset_url | img_tag: 'bar-item-our-promise' }}
 								<h5 class="content__item__header">OUR PROMISE</h5>
-								<img class="content__item-arrow" src="../icons/right.png" alt="right">
+								{{ 'right.png' | asset_url | img_tag: '', 'content__item-arrow' }}
 							</a>
 						</li>
 
 						<li class="content__item">
 							<a class="content__item-link" href="#" target="_blank">
-								<img src="../assets/bar-item-our-people.jpg" alt="bar-item-our-people">
+								{{ 'bar-item-our-people.jpg' | asset_url | img_tag: 'bar-item-our-people' }}
 								<h5 class="content__item__header">OUR PEOPLE</h5>
-								<img class="content__item-arrow" src="../icons/right.png" alt="right">
+								{{ 'right.png' | asset_url | img_tag: '', 'content__item-arrow' }}
 							</a>
 						</li>
 
 						<li class="content__item">
 							<a class="content__item-link" href="#" target="_blank">
-								<img src="../assets/bar-item-our-process.jpg" alt="bar-item-our-process">
+								{{ 'bar-item-our-process.jpg' | asset_url | img_tag: 'bar-item-our-process' }}
 								<h5 class="content__item__header">OUR PROCESS</h5>
-								<img class="content__item-arrow" src="../icons/right.png" alt="right">
+								{{ 'right.png' | asset_url | img_tag: '', 'content__item-arrow' }}
 							</a>
 						</li>
 					</ul>
@@ -158,12 +168,16 @@
 				<li class="menu__item">
 					<button class="first-level-menu" onclick="showSecondLevel(event.target)">
 						SUPPORT
-						<span class="mobile-arrow"><img src="../icons/right-arrow.png" alt=""></span>
+						<span class="mobile-arrow">
+							{{ 'right-arrow.png' | asset_url | img_tag }}
+						</span>
 					</button>
 
 					<ul class="menu__item-content content-support">
 						<button class="second-level-menu" onclick="hideSecondLevel()">
-							<span class="mobile-arrow-back"><img src="../icons/right.png" alt=""></span>
+							<span class="mobile-arrow-back">
+								{{ 'right.png' | asset_url | img_tag }}
+							</span>
 							SUPPORT
 						</button>
 
@@ -224,12 +238,18 @@
 
 		<div class="capabilities">
 			<div class="search" id="search">
-				<button onclick="showSearch()" class="search__icon button"><svg aria-hidden="true" focusable="false" class="icon icon-search-2" viewBox="0 0 16 16"><path d="M10.805 12.131a6.562 6.562 0 1 1 1.326-1.326l3.282 3.282a.938.938 0 0 1-1.326 1.326l-3.282-3.282zm-3.93-.569a4.688 4.688 0 1 0 0-9.375 4.688 4.688 0 0 0 0 9.376z" fill="#414141" fill-rule="nonzero" opacity=".4"></path></svg></button>
+				<button onclick="showSearch()" class="search__icon button">
+					<svg aria-hidden="true" focusable="false" role="presentation" class="icon icon-search-2" viewBox="0 0 16 16"><path d="M10.805 12.131a6.562 6.562 0 1 1 1.326-1.326l3.282 3.282a.938.938 0 0 1-1.326 1.326l-3.282-3.282zm-3.93-.569a4.688 4.688 0 1 0 0-9.375 4.688 4.688 0 0 0 0 9.376z" fill="#414141" fill-rule="nonzero" opacity=".4"></path></svg>
+					{% comment %}{{ 'icon-search.svg' | asset_url | img_tag }}{% endcomment %}
+				</button>
 				<input type="text" placeholder="Search" id="search__input">
 			</div>
 
 			<div class="cart">
-				<a href="#" target="_blank"><svg aria-hidden="true" focusable="false" class="icon icon-cart-2 cart-icon" viewBox="0 0 24 23"><g fill="none" fill-rule="evenodd"><path d="M0-1h24v24H0z"></path><g fill="#FFF" fill-rule="nonzero"><circle cx="18.412" cy="20.043" r="2.125"></circle><path d="M24 3.243H5.368L4.708 0H0v1.704h3.316l2.473 12.073-.952 3.59h16.635v-1.703H7.053l.495-1.832-.018-.073 14.84-1.21z"></path><circle cx="7.786" cy="20.043" r="2.125"></circle></g></g></svg></a>
+				<a href="#" target="_blank">
+					<svg aria-hidden="true" focusable="false" role="presentation" class="icon icon-cart-2" viewBox="0 0 24 23"><g fill="none" fill-rule="evenodd"><path d="M0-1h24v24H0z"></path><g fill="#FFF" fill-rule="nonzero"><circle cx="18.412" cy="20.043" r="2.125"></circle><path d="M24 3.243H5.368L4.708 0H0v1.704h3.316l2.473 12.073-.952 3.59h16.635v-1.703H7.053l.495-1.832-.018-.073 14.84-1.21z"></path><circle cx="7.786" cy="20.043" r="2.125"></circle></g></g></svg>
+					{% comment %}{{ 'icon-cart.svg' | asset_url | img_tag }}{% endcomment %}
+				</a>
 			</div>
 		</div>
 	</div>
