--- a/src/styles/blocks/cart/_cart.scss
+++ b/src/styles/blocks/cart/_cart.scss
@@ -1,10 +1,8 @@
 .cart {
-	padding-top: 75px;
-	padding-bottom: 100px;
-	padding-left: 20px;
-	padding-right: 20px;
+  padding: 75px 20px 100px;
 
-	.cart__empty {
+
+  .cart__empty {
 		margin-top: 60px;
 		font-size: 20px;
 		line-height: 1.5;
