--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -124,6 +124,7 @@
 #search__input {
     outline: 0;
     border: 0;
+	padding: 0;
     border-bottom: 1px solid #d2d2d2;
     width: 0;
     visibility: hidden;
@@ -132,11 +133,13 @@
 
 .cart {
     width: 79px;
+	height: calc(100% + 4px);
+	margin-top: -1px;
     background-color: black;
+	color: white;
     display: inline-flex;
     justify-content: center;
     align-items: center;
-    -webkit-clip-path: polygon(16% 0%, 100% 0, 100% 100%, 0 100%);
     clip-path: polygon(15% 0%, 100% 0, 100% 100%, 0 100%);
 }
 
