--- a/src/sections/footer-custom.liquid
+++ b/src/sections/footer-custom.liquid
@@ -81,9 +81,9 @@
 	<div class="footer-bottom">
 		<div class="footer-lang-select">
 			<select name="footer-lang" class="js-footer-lang_select-single">
-				<option value="EN"></option>
-				<option value="RU"></option>
-				<option value="UA"></option>
+				<option value="EN" data-flag-url="{{ 'en.png' | asset_url }}"></option>
+				<option value="RU" data-flag-url="{{ 'ru.png' | asset_url }}"></option>
+				<option value="UA" data-flag-url="{{ 'ua.png' | asset_url }}"></option>
 			</select>
 		</div>
 
