--- a/src/sections/header-custom.liquid
+++ b/src/sections/header-custom.liquid
@@ -30,8 +30,8 @@
 			<div class="links-right__dropdown links-right__item" id="lang-select">
 				<select class="js-lang_select-single" name="state">
 					<option value="EN" data-flag-url="{{ 'en.png' | asset_url }}"></option>
-					<option value="RU"></option>
-					<option value="UA"></option>
+					<option value="RU" data-flag-url="{{ 'ru.png' | asset_url }}"></option>
+					<option value="UA" data-flag-url="{{ 'ua.png' | asset_url }}"></option>
 				</select>
 			</div>
 		</div>
